# prediction_market

./: .gitignore  manage.py  package.json  pyproject.toml  webpack.config.js
accounts/: api.py  serializers.py
backend/: models.py  serializers.py  tests.py  urls.py  views.py
backend/migrations/: 0001_initial.py  0002_auto_20190417_1048.py  0003_auto_20190424_1950.py  0004_auto_20190429_0905.py  0005_auto_20190505_1032.py  0006_auto_20190505_1039.py  0007_auto_20190505_1116.py  0008_auto_20190505_1125.py  0009_order_market.py  0010_auto_20190521_1731.py  0011_auto_20190524_1019.py
frontend/src/: index.js
frontend/src/actions/: auth.js  markets.js  message.js  orders.js  outcomes.js  portfolio.js  portfolios.js  positions.js  types.js
frontend/src/components/: App.js  MarketList.js
frontend/src/components/accounts/: Login.js  Register.js
frontend/src/components/common/: PrivateRoute.js
frontend/src/components/layout/: Alerts.js  Header.js  Main.js
frontend/src/components/predictionMarket/: Market.js  MarketForm.js  Markets.js  OrderForm.js  Orders.js  Outcomes.js  Portfolios.js  Positions.js
frontend/src/reducers/: auth.js  errors.js  index.js  markets.js  message.js  orders.js  outcomes.js  portfolio.js  portfolios.js  positions.js
frontend/templates/frontend/: index.html
prediction_market/: settings.py  urls.py  wsgi.py
prediction_market/prediction_market/: settings.py  urls.py
tests/: test_prediction_market.py
