[tool.poetry]
name = "prediction_market"
version = "0.1.0"
description = ""
authors = ["Nikita Chashchinskii <nikita.chashchinskii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
